...
    const val WIDE_NAVIGATION_RAIL = "KmtScaffold:WideNavigationRail"
    const val PERMANENT_DRAWER_SHEET = "KmtScaffold:PermanentDrawerSheet"
    const val RAIL_TOGGLE_BUTTON = "KmtScaffold:RailToggleButton"
    const val SCAFFOLD_CONTENT_AREA = "KmtScaffold:ScaffoldContentArea"

    object FabTestTags {
        const val FAB_ANIMATED_CONTENT = "KmtScaffold:FabAnimatedContent"
        const val SMALL_FAB = "KmtScaffold:SmallFab"
        const val EXTENDED_FAB = "KmtScaffold:ExtendedFab"
        const val FAB_ADD_ICON = "KmtScaffold:FabAddIcon"
        const val FAB_ADD_TEXT = "KmtScaffold:FabAddText"
    }

...
